# newmark

./: .env.example  .gitignore  docker-compose.yml
agents/cu1-lecture-presse/: Dockerfile  excel_builder.py  main.py  requirements.txt  transaction_analysis.py
agents/cu4-recherche-proprietaire/: Dockerfile  excel_builder.py  laplace_scraper.py  main.py  requirements.txt
agents/cu5-veille-presse/: Dockerfile  main.py  requirements.txt
apps/D00_hub/: .env.local  package-lock.json  package.json  tsconfig.json
apps/D04-CU6_planning-visites/: .env.local  next.config.ts  package-lock.json  package.json
apps/D05-CU1_carte-offre-retail/: .env.local  next.config.ts  package-lock.json  package.json
apps/D05-CU4_recherche-proprietaire/: .env.local  next.config.ts  package-lock.json  package.json
apps/D06-CU8_feuilles-temps-graphistes/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/D08-CU1_encarts-diffusion/: next.config.ts  package-lock.json  package.json
apps/D08-CU6_dashboard-offres/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
apps/D09-CU5_carte-commercialisation/: .env.local  next.config.ts  package.json  server.js
apps/D09-CU5_carte-transactions/: .env.local  next.config.ts  package.json  pnpm-lock.yaml
docs/: IT-HANDOVER.md  SETUP.md  TESTING.md
libs/python/: pyproject.toml
libs/python/newmark_common/: __init__.py  async_jobs.py  browser.py  openai_analysis.py
libs/python/newmark_common/scrapers/: __init__.py  businessimmo.py  lemonde.py
nginx/: nginx.conf
scripts/: build-apps.sh  sync-env.sh
(+210 files in other folders)
